Detail export endpoints
